* Helping mobile devices a bit; removing the body padding by default (I'm sure they'll appreciate the gesture), and removing the extra box-shadow animation on the notifications popup, as it seems to slow it down even on my S3 to the point that the animation no longer shows at all, meaning it's probably going to be jerky for all mobile devices. Without the extra animation, it's still barely visible, but at least it's there. (index.css)
* Said notif popup came a bit out of nowhere; changed it to drop from the notif title instead, as expected (and in line with all other dropdown animations.) (index.css)

* Changed z-index for mini-menu animations, to ensure they always come on top of main menu animations. While usually not an issue, this would give odd behaviors on search and notif popup animations when hovering the main menu while the animations were being performed. (index.css)

! Oops, fixed the *wrong* bug yesterday with regards to saving notification settings... (Notifications.php, Profile.template.php)

! Fixed button icon position in buttons for IE8. This was due to a hack that was no longer needed since the recent button code rewrite. It just goes to show how much I test under IE8... (extra.ie8.css)

--- a/Themes/default/skins/extra.ie8.css
+++ b/Themes/default/skins/extra.ie8.css
@@ -1,12 +1,4 @@
 
-input[type=button], input[type=submit]
-	padding: 3px 4px
-
-// Old IEs reset background-position to 0 if you provide them with multiples values :-/
-input.submit
-	padding-left: 23px
-	background-position: 4px center
-
 #thought_form input[type=submit]
 	background-position: -99px -99px
 
