--- a/Themes/default/skins/index.css
+++ b/Themes/default/skins/index.css
@@ -59,7 +59,9 @@ body
 	color: #ccc
 	font: $main_font_size $main_font
 	margin: 0
-	padding: 12px
+	@if !mobile
+		padding: 12px
+	@endif
 	@if !ie10 && !chrome
 		transition: all .3s ease
 	@endif
@@ -993,7 +995,7 @@ li.sep
 
 // Styling for the mini-menu container below the parent link...
 .mimenu
-	z-index: 42
+	z-index: 47
 	position: absolute
 	padding: 10px 0 0
 	font: 400 14px/20px $main_font
@@ -1783,7 +1785,7 @@ th.last_th
 		.mimenu final
 			opacity: 0
 			visibility: hidden
-			transform: perspective(500px) translateY(75px) rotateX(-45deg)
+			transform: perspective(500px) translateY(-10px) rotateX(-45deg)
 			transform-origin: 50% 0
 			width: 420px
 			min-width: 200px
@@ -1791,8 +1793,10 @@ th.last_th
 			cursor: auto
 			top: 100%
 			ul li
-				transition: all .3s ease
-				box-shadow: inset 0 -300px 300px -20px rgba(0,0,0,.5)
+				@if !mobile
+					transition: all .3s ease
+					box-shadow: inset 0 -300px 300px -20px rgba(0,0,0,.5)
+				@endif
 				padding: 4px 0 0
 
 		.open
@@ -1800,9 +1804,11 @@ th.last_th
 			visibility: visible
 			transform: perspective(500px) rotateX(0)
 			transition: all .6s ease
-			ul li
-				transition: all .6s ease
-				box-shadow: none
+			@if !mobile
+				ul li
+					transition: all .6s ease
+					box-shadow: none
+			@endif
 
 	.n_container
 		white-space: normal
